# microdrone

./: LICENSE  README.md
controller/: Cargo.toml  build.rs  build_output
controller/.cargo/: config.toml
controller/src/: lib.rs  moving_sum.rs  signal.rs  telemetry.rs
controller/src/gui/: altimeter.rs  assets.rs  battery_indicator.rs  label.rs  mod.rs
controller/src/input/: gamepad.rs  mod.rs  pilot_controller.rs
controller/src/radio/: mod.rs  state.rs
controller/src/rx/: mod.rs
fc/: Cargo.toml  Embed.toml  rust-toolchain-nightly.toml  rust-toolchain.toml
fc-common/: Cargo.toml
fc-common/src/: lib.rs  signal.rs  telemetry.rs
fc/.cargo/: config.toml
fc/src/: main.rs  signal.rs  telemetry.rs  types.rs
fc/src/bms/: mod.rs
fc/src/env/: mod.rs
fc/src/radio/: mod.rs
flight_controller_pcb/: #auto_saved_files#  _autosave-flight_controller_pcb.kicad_pcb  _autosave-flight_controller_pcb.kicad_sch  flight_controller_pcb.kicad_dru  flight_controller_pcb.kicad_pcb  flight_controller_pcb.kicad_prl  flight_controller_pcb.kicad_pro  flight_controller_pcb.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table  ~flight_controller_pcb.kicad_pcb.lck
flight_controller_pcb/fclib.pretty/: Diode_SMD_SOD-723.kicad_mod  Inductor_Coilcraft_XFL3012-222MEC.kicad_mod  JST_SH_ZX-SH1.0-8PWT.kicad_mod  LED_RGB_TZ-P4-1615RGBTCA1-0.55T.kicad_mod
